SET (SOURCES gomatlab.cpp)
# SET (QTHEADERS your_files_here)
# SET (QTINTERFACES your_files_here) 

SET (TARGET Gomatlab)

#QT_WRAP_CPP (${TARGET} SOURCES ${QTHEADERS})
#QT_WRAP_UI  (${TARGET} HEADERS SOURCES ${QTINTERFACES})

# Matlab base path
SET          (MATLAB $ENV{MATLAB})
IF (MACHINE_TYPE MATCHES amd64)
    SET (MATLAB_ARCH glnxa64)
    SET (MEX_EXTENSION .mexa64)
ELSE (MACHINE_TYPE MATCHES amd64)
    SET (MATLAB_ARCH glnx86)
    SET (MEX_EXTENSION .mexglx)
ENDIF (MACHINE_TYPE MATCHES amd64)

## For now, always set to 3.3
IF (BUILD_WITH_GCC_3_3)
    SET (CMAKE_CXX_COMPILER g++-3.3)
    SET (CMAKE_C_COMPILER gcc-3.3)
ENDIF (BUILD_WITH_GCC_3_3)

SET          (MATLAB_LIB_PATH ${MATLAB}/extern/lib/${MATLAB_ARCH};${MATLAB}/bin/${MATLAB_ARCH})
SET          (MATLAB_INC_PATH ${MATLAB}/extern/include)
SET          (GOPATH $ENV{GOPATH})

FIND_LIBRARY (GOLIB  NAMES Go  PATHS ${GOPATH}/../lib)
FIND_LIBRARY (LIBENG NAMES eng PATHS ${MATLAB_LIB_PATH})
FIND_LIBRARY (LIBUT  NAMES ut  PATHS ${MATLAB_LIB_PATH})
FIND_LIBRARY (LIBMAT NAMES mat PATHS ${MATLAB_LIB_PATH})
FIND_LIBRARY (LIBMX  NAMES mx  PATHS ${MATLAB_LIB_PATH})
FIND_LIBRARY (LIBMEX NAMES mex PATHS ${MATLAB_LIB_PATH})

ADD_DEFINITIONS (-DHAVE_MATLAB=1)
IF(UNIX)
 ADD_DEFINITIONS     ($ENV{CPPFLAGS} -D_REENTRANT)
ENDIF(UNIX)

INCLUDE_DIRECTORIES (${MATLAB_INC_PATH} ${GOPATH}/include)
LINK_LIBRARIES (${GOLIB}
                ${LIBENG}
                ${LIBUT}
                ${LIBMAT}
                ${LIBMX}
                ${LIBMEX})
ADD_LIBRARY (${TARGET} MODULE ${SOURCES})
INSTALL_TARGETS (/lib ${TARGET})
# SUBDIRS (swig)

IF (BUILD_PYTHON_MODULE)
    ADD_SUBDIRECTORY (${PROJECT_SOURCE_DIR}/matlab/python)
ENDIF (BUILD_PYTHON_MODULE)

IF (BUILD_MATLAB_MEX)
    ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/matlab/mex)
ENDIF (BUILD_MATLAB_MEX)
