INCLUDE (FindSWIG)
PROJECT             (golib_guile)
EXEC_PROGRAM        (guile-config ARGS link OUTPUT_VARIABLE GUILE_LIBS)
EXEC_PROGRAM        (guile-config ARGS compile OUTPUT_VARIABLE GUILE_CFLAGS)
#EXEC_PROGRAM        (chicken-config ARGS -shared -libs OUTPUT_VARIABLE CHICKEN_LIBS)
EXEC_PROGRAM        (${SWIG_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}
                        ARGS -I../include -Linkage passive -scmstub -guile -c++ -scm -proxy golib.i)
FIND_LIBRARY        (GOLIB NAMES Go PATHS $ENV{GOPATH}/../lib ${GOPATH}/lib)
SET                 (GOMATLAB_LIB "-lGomatlab")
LINK_LIBRARIES      (${GUILE_LIBS} ${GOLIB} ${GOMATLAB_LIB})
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/../include)
ADD_DEFINITIONS     (${GUILE_CFLAGS})
ADD_LIBRARY         (golib_guile MODULE golib_wrap.cxx golibguile.cpp)
INSTALL_TARGETS     (/lib golib_guile)
