# Example for library:
noinst_LTLIBRARIES = libGographics.la
libGographics_la_SOURCES = goblockrenderer.cc \
						   goimagebuffer.cc \
						   gopowfunction.cc \
						   gotiffimage.cc \
						   goviewplane.cc \
						   goviewvolume.cc \
						   govolumerenderer.cc
INCLUDES = -I@top_srcdir@/include 

AM_CFLAGS = -D_REENTRANT
AM_CXXFLAGS = -D_REENTRANT

