# Example for library:
noinst_LTLIBRARIES = libGomath.la
libGomath_la_SOURCES = go3vector.cc \
					   go44matrix.cc \
					   go4vector.cc \
					   gocomplex.cc \
					   gointegral.cc \
					   golinearalgebra.cc \
					   gomatrix.cc \
					   gonvector.cc \
					   goposition.cc \
					   goquaternion.cc
INCLUDES = -I@top_srcdir@/include 
#libgame_la_LIBADD = -L$(GOPATH)/lib -lGo

AM_CFLAGS = -D_REENTRANT
AM_CXXFLAGS = -D_REENTRANT

