# Example for library:
noinst_LTLIBRARIES = libGomath.la
libGomath_la_SOURCES = go3vectori.cc \
					   go44matrix.cc \
					   go4vectori.cc \
					   gomatrixi.cc \
					   gocomplex.cc \
					   goposition.cc \
					   goquaternion.cc \
                       golinearalgebra.cc \
					   gopdf.cpp \
					   gogausspdf.cpp \
					   gopoint.cpp \
					   gradient.cpp
INCLUDES = -I@top_srcdir@/include 
#libgame_la_LIBADD = -L$(GOPATH)/lib -lGo

AM_CFLAGS = -D_REENTRANT
AM_CXXFLAGS = -D_REENTRANT

