# Example for library:
noinst_LTLIBRARIES = libGonetwork.la
libGonetwork_la_SOURCES = goconnection.cc \
						  gonetobject.cc \
						  gonetwork.cc \
						  goserver.cc
INCLUDES = -I@top_srcdir@/include 
#libgame_la_LIBADD = -L$(GOPATH)/lib -lGo

AM_CFLAGS = -D_REENTRANT
AM_CXXFLAGS = -D_REENTRANT

