# Example for library:
noinst_LTLIBRARIES = libGosignal.la
libGosignal_la_SOURCES = gosignal3dbase.cpp \
                         gosignal3d.cc \
                         gosignal2d.cc
                         
INCLUDES = -I@top_srcdir@/include 
#libgame_la_LIBADD = -L$(GOPATH)/lib -lGo

AM_CFLAGS = -D_REENTRANT
AM_CXXFLAGS = -D_REENTRANT

