# Example for library:
noinst_LTLIBRARIES = libGovolnav.la
libGovolnav_la_SOURCES = goblockprovider.cc \
					   goblockstore.cc \
					   gocluster3d.cc \
					   gopresencemanager.cc \
					   goresolutionmanager.cc \
					   goviewmanager.cc \
					   govol.cc \
					   govolumefile.cc \
					   govolumefileinfo.cc \
					   govolumenavigator.cc \
					   gosblockrenderer.cc
INCLUDES = -I@top_srcdir@/include 
#libgame_la_LIBADD = -L$(GOPATH)/lib -lGo

AM_CFLAGS = -D_REENTRANT
AM_CXXFLAGS = -D_REENTRANT

